# rosie

./: .env.example  .envrc  .gitignore  README.md  agent.py  cli.py  config.py  devenv.nix  flake.nix  main.py  pyproject.toml  rosie  tools.py
.github/workflows/: ci.yml
src/: agent.py  cli.py  config.py  models.py  tools.py  utils.py  web.py
