[tool.pyright]
include = ["src"]
exclude = [
  "src/cache",
]
defineConstant = { DEBUG = true }

reportMissingImports = true
reportMissingTypeStubs = false

pythonVersion = "3.10"
pythonPlatform = "Linux"

executionEnvironments = [
  { root = "src" }
]

[tool.poetry]
name = "rosie"
version = "0.1.0"
description = ""
authors = ["Luiz Ribeiro <luizribeiro@gmail.com>"]
readme = "README.md"
packages = [
  {include = "*", from="src"},
  {include = "cache", from="src"},
]

[tool.poetry.scripts]
rosie = 'cli:app'

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = "^3.9.5"
aiomqtt = "^2.0.1"
beautifulsoup4 = "^4.12.3"
fastapi = "^0.110.2"
langchain = "^0.2.11"
langchain-openai = "^0.1.19"
langchain-groq = "^0.1.6"
langchain-community = "^0.2.10"
pytz = "^2024.1"
rich = "^13.7.1"
typer = "^0.12.3"
uvicorn = "^0.29.0"

[tool.poetry.group.dev.dependencies]
pyright = "^1.1.359"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
